now menu section

--- a/index.html
+++ b/index.html
@@ -43,55 +43,29 @@
             <span class="porfile-box--circle--name">Shayan</span>
         </div>
 
-        <div class="user-select">
+        <section class="user-select">
             <input type="radio" class="hide-me" name="gender" id="open1">
             <label for="open1">
-           <div class="user-select--profile-box"></div>
-       </label>
-            <section class="nav-user-select--menu-box">
-                <div class="nav-user-select--menu-box--text-box">
-                    <p class="nav-user-select--menu-box--text-box--text">Menu</p>
+           <div class="user-select--menu-box">
+            <svg viewBox="0 0 44 44" width="1em" height="1em" class="user-select--menu-box--icon"><circle cx="7" cy="7" r="6"></circle><circle cx="22" cy="7" r="6"></circle><circle cx="37" cy="7" r="6"></circle><circle cx="7" cy="22" r="6"></circle><circle cx="22" cy="22" r="6"></circle><circle cx="37" cy="22" r="6"></circle><circle cx="7" cy="37" r="6"></circle><circle cx="22" cy="37" r="6"></circle><circle cx="37" cy="37" r="6"></circle></svg>
+           </div>
+           </label>
+
+
+            <div class="menu-con">
+                <p class="menu-con--name">
+                    Menu
+                </p>
+                <div class="menu-con--grid">
+                    <div class="social-con">
+
+                    </div>
                 </div>
-                <div class="nav-user-select--menu-box--social-box">
-                    <div class="nav-user-select--menu-box--social-box--side-box">
-                        <label for="" class="nav-user-select--menu-box--social-box--side-box--search-box">
-                             <input type="search" name="" id="" class="nav-user-select--menu-box--social-box--side-box--search-box--search-bar" placeholder="Search menu">
-                             <svg viewBox="0 0 16 16" width="1em" height="1em" class="nav-user-select--menu-box--social-box--side-box--search-box--search-bar--icon" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-448 -544)"><g fill-rule="nonzero" style="user-select: auto;"><path d="M10.743 2.257a6 6 0 1 1-8.485 8.486 6 6 0 0 1 8.485-8.486zm-1.06 1.06a4.5 4.5 0 1 0-6.365 6.364 4.5 4.5 0 0 0 6.364-6.363z" transform="translate(448 544)" style="user-select: auto;"></path><path d="M10.39 8.75a2.94 2.94 0 0 0-.199.432c-.155.417-.23.849-.172 1.284.055.415.232.794.54 1.103a.75.75 0 0 0 1.112-1.004l-.051-.057a.39.39 0 0 1-.114-.24c-.021-.155.014-.356.09-.563.031-.081.06-.145.08-.182l.012-.022a.75.75 0 1 0-1.299-.752z" transform="translate(448 544)" style="user-select: auto;"></path><path d="M9.557 11.659c.038-.018.09-.04.15-.064.207-.077.408-.112.562-.092.08.01.143.034.198.077l.041.036a.75.75 0 0 0 1.06-1.06 1.881 1.881 0 0 0-1.103-.54c-.435-.058-.867.018-1.284.175-.189.07-.336.143-.433.2a.75.75 0 0 0 .624 1.356l.066-.027.12-.061z" transform="translate(448 544)" style="user-select: auto;"></path><path d="m13.463 15.142-.04-.044-3.574-4.192c-.599-.703.355-1.656 1.058-1.057l4.191 3.574.044.04c.058.059.122.137.182.24.249.425.249.96-.154 1.41l-.057.057c-.45.403-.986.403-1.411.154a1.182 1.182 0 0 1-.24-.182zm.617-.616.444-.444a.31.31 0 0 0-.063-.052c-.093-.055-.263-.055-.35.024l.208.232.207-.206.006.007-.22.257-.026-.024.033-.034.025.027-.257.22-.007-.007zm-.027-.415c-.078.088-.078.257-.023.35a.31.31 0 0 0 .051.063l.205-.204-.233-.209z" transform="translate(448 544)" style="user-select: auto;"></path></g></g></svg>
-                            </label>
-                        <div class="nav-user-select--menu-box--social-box--side-box--social">
-                            <p class="nav-user-select--menu-box--social-box--side-box--social--text">Social</p>
-                            <div class="nav-user-select--menu-box--social-box--side-box--social--container">
-                                <img class="nav-user-select--menu-box--social-box--side-box--social--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px;">
-                                <p class="nav-user-select--menu-box--social-box--side-box--social--container--img--text"> <span class="nav-user-select--menu-box--social-box--side-box--social--container--img--text--head">Events</span> Organise or find events and other things to do online and nearby.</p>
-                            </div>
-                            <div class="nav-user-select--menu-box--social-box--side-box--social--container">
-                                <img class="nav-user-select--menu-box--social-box--side-box--social--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yN/r/P3LEV6Y0FCf.png" alt="" style="height: 36px; width: 36px;">
-                                <p class="nav-user-select--menu-box--social-box--side-box--social--container--img--text"> <span class="nav-user-select--menu-box--social-box--side-box--social--container--img--text--head">Find Friends</span> Search for friends or people you may know.</p>
-                            </div>
-                            <div class="nav-user-select--menu-box--social-box--side-box--social--container">
-                                <img class="nav-user-select--menu-box--social-box--side-box--social--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yX/r/L2qlIhGe55v.png" alt="" style="height: 36px; width: 36px;">
-                                <p class="nav-user-select--menu-box--social-box--side-box--social--container--img--text"> <span class="nav-user-select--menu-box--social-box--side-box--social--container--img--text--head">Groups</span> Connect with people who share your interests.</p>
-                            </div>
-                            <div class="nav-user-select--menu-box--social-box--side-box--social--container">
-                                <img class="nav-user-select--menu-box--social-box--side-box--social--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yK/r/GY9cGj6EqQ2.png" alt="" style="height: 36px; width: 36px;">
-                                <p class="nav-user-select--menu-box--social-box--side-box--social--container--img--text"> <span class="nav-user-select--menu-box--social-box--side-box--social--container--img--text--head">News Feed</span>See relevant posts from people and Pages that you follow.</p>
-                            </div>
-                            <div class="nav-user-select--menu-box--social-box--side-box--social--container">
-                                <img class="nav-user-select--menu-box--social-box--side-box--social--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/y-/r/TbOx5lWkw-N.png" alt="" style="height: 36px; width: 36px;">
-                                <p class="nav-user-select--menu-box--social-box--side-box--social--container--img--text"> <span class="nav-user-select--menu-box--social-box--side-box--social--container--img--text--head">Pages</span> Discover and connect with businesses on Facebook.</p>
-                            </div>
-                            <div class="nav-user-select--personal-divider" style="user-select: auto; position:relative; top:2rem; left: 0.5rem;"></div>
-                            <section class="no-hover down further-down">
-                                <div class="nav-user-notification--like-box-sec-img-box header">
-                                    <div class="nav-user-notification--like-box-sec-img-box-img img small-img"></div>
-                                    <div class="details short">
-                                        <span class="about short left"></span>
-                                        <span class="about left"></span>
-                                    </div>
-                                </div>
-                            </section>
-                            <!--fff-->
-                        </div>
+
+            </div>
+
+
+        </section>
     </nav>
 
 
