menu section is almost complete

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
                                 <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yH/r/kyCAf2jbZvF.png" alt="" style="height: 36px; width: 36px;">
                                 <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
                             </div>
+                            <span class="divider"></span>
+                            <div class="social-con--social-box--container" style="user-select: auto;">
+                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
+                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
+                            </div>
+                            <div class="social-con--social-box--container" style="user-select: auto;">
+                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
+                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
+                            </div>
+                            <div class="social-con--social-box--container" style="user-select: auto;">
+                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
+                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
+                            </div>
                         </div>
                     </div>
 
