--- a/index.html
+++ b/index.html
@@ -85,21 +85,28 @@
                                 <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
                             </div>
                             <span class="divider"></span>
-                            <div class="social-con--social-box--container" style="user-select: auto;">
-                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
-                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
-                            </div>
-                            <div class="social-con--social-box--container" style="user-select: auto;">
-                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
-                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
-                            </div>
-                            <div class="social-con--social-box--container" style="user-select: auto;">
-                                <img class="social-con--social-box--container--img" src="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/qB7KME4oQ7N.png" alt="" style="height: 36px; width: 36px; user-select: auto;">
-                                <p class="social-con--social-box--container--text" style="user-select: auto;"> <span class="social-con--social-box--container--heading" style="user-select: auto;">Events</span> Organise or find events and other things to do online and nearby.</p>
+                            <div class="social-loader--con">
+                                <div class="social-loader--con--header">
+                                    <div class="social-loader--con--header--img"></div>
+                                    <div class="social-loader--con--header--detail">
+                                        <div class="social-loader--con--header--detail--name"></div>
+                                        <div class="social-loader--con--header--detail--about"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-
+                    <div class="create-con">
+                        <p class="create-con--name">Create</p>
+                        <div class="create-con--grid">
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/IUsLKu7QZiy.png&quot;); background-position: 0px -451px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
