--- a/index.html
+++ b/index.html
@@ -105,12 +105,95 @@
                                     <p class="create-con--grid-box--con--icon--name">Post</p>
                                 </div>
                             </div>
+                            <!-- <div class="create-con--grid-box"> -->
+                            <!-- <div class="create-con--grid-box--con"> -->
+                            <!-- <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/IUsLKu7QZiy.png&quot;); background-position: 0px -451px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i> -->
+                            <!-- <p class="create-con--grid-box--con--icon--name">Post</p> -->
+                            <!-- </div> -->
+                            <!-- </div> -->
+
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yu/r/KT-JCP_OuLi.png&quot;); background-position: 0px -971px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/IUsLKu7QZiy.png&quot;); background-position: 0px -346px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yu/r/KT-JCP_OuLi.png&quot;); background-position: 0px -236px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/IUsLKu7QZiy.png&quot;); background-position: 0px -514px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+
+                            <div class="create-con--grid-box">
+                                <div class="create-con--grid-box--con">
+                                    <i data-visualcompletion="css-img" class="create-con--grid-box--con--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yE/r/bezWQZkMGaH.png&quot;); background-position: 0px -250px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <p class="create-con--grid-box--con--icon--name">Post</p>
+                                </div>
+                            </div>
+
+                            <div class="create-loader-con">
+                                <div class="create-loader-con--header">
+                                    <div class="create-loader-con--header--img"></div>
+                                    <div class="create-loader-con--header--img--detail">
+                                        <div class="create-loader-con--header--img--detail--name"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="create-loader-con">
+                                <div class="create-loader-con--header">
+                                    <div class="top-prefix create-loader-con--header--img"></div>
+                                    <div class="create-loader-con--header--img--detail">
+                                        <div class="create-loader-con--header--img--detail--name"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
             </div>
 
+            <input type="radio" class="hide-me" name="gender" id="open2">
+            <label for="open2">
+                <div class="user-select--messenger-box">
+                    <svg viewBox="0 0 28 28" alt="" class="user-select--messenger-box--icon" height="20" width="20" style="user-select: auto;"><path d="M14 2.042c6.76 0 12 4.952 12 11.64S20.76 25.322 14 25.322a13.091 13.091 0 0 1-3.474-.461.956 .956 0 0 0-.641.047L7.5 25.959a.961.961 0 0 1-1.348-.849l-.065-2.134a.957.957 0 0 0-.322-.684A11.389 11.389 0 0 1 2 13.682C2 6.994 7.24 2.042 14 2.042ZM6.794 17.086a.57.57 0 0 0 .827.758l3.786-2.874a.722.722 0 0 1 .868 0l2.8 2.1a1.8 1.8 0 0 0 2.6-.481l3.525-5.592a.57.57 0 0 0-.827-.758l-3.786 2.874a.722.722 0 0 1-.868 0l-2.8-2.1a1.8 1.8 0 0 0-2.6.481Z" style="user-select: auto;"></path></svg>
+                </div>
+            </label>
+            <div class="messenger-con">
+                <div class="messenger-con--top-grid">
+                    <p class="messenger-con--top-grid--name">Messenger</p>
+                </div>
+                <div class="messenger-con--top-grid--icon-box">
+                    <i data-visualcompletion="css-img" class="messenger-con--top-grid--icon-box--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/y2/r/9ZjkTnUGFaz.png&quot;); background-position: -105px -67px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                    <i data-visualcompletion="css-img" class="messenger-con--top-grid--icon-box--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/y7/r/cRKMOGY8Fy5.png&quot;); background-position: 0px -950px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block;"></i>
+                    <i data-visualcompletion="css-img" class="messenger-con--top-grid--icon-box--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yK/r/Po0uf_6n0OV.png&quot;); background-position: 0px -400px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block;"></i>
+                    <i data-visualcompletion="css-img" class="messenger-con--top-grid--icon-box--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/O06LE4vrsh-.png&quot;); background-position: 0px -1175px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
+                </div>
+
+
+
+
+
+
+
+            </div>
 
         </section>
     </nav>
