--- a/index.html
+++ b/index.html
@@ -440,6 +440,33 @@
                         <b>  OLIVIA</b> Oliva Recently Posted A Posted "Hello I am LiVe NOwW!!"" <span class="notification-con--earlier-post--img--text--time">4 DAYS AGO</span>
                     </p>
                 </div>
+
+                <!-- <div class="messenger-con--loader-con"> -->
+                <!-- <div class="messenger-con--loader-con--header"> -->
+                <!-- <div class="messenger-con--loader-con--header--img"></div> -->
+                <!-- <div class="messenger-con--loader-con--header--img--details"> -->
+                <!-- <div class="messenger-con--loader-con--header--img--details--name"></div> -->
+                <!-- <div class="messenger-con--loader-con--header--img--details--about"></div> -->
+                <!-- </div> -->
+                <!-- </div> -->
+                <!-- </div> -->
+                <div class="notification-con--loader">
+                    <div class="notification-con--loader--header">
+                        <div class="notification-con--loader--header--img"></div>
+                        <div class="notification-con--loader--header--img--details">
+                            <div class="notification-con--loader--header--img--details--name"></div>
+                            <div class="notification-con--loader--header--img--details--about"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+            </div>
             </div>
 
 
@@ -495,6 +522,9 @@
                     <p class="profile-con--other-con--circle--icon--heading"> Log Out
                     </p>
                 </div>
+
+
+
             </div>
         </section>
     </nav>
