NAvbar   in the mobile wOOoooOOOOOOOOOOo      i was SsSooooOOOooooOOOoO exicting-   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
 <body>
 
+
+    <!--NAvbar   in the mobile wOOoooOOOOOOOOOOo      i was SsSooooOOOooooOOOoO exicting-   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
+    <nav class="nav-responsive">
+
+    </nav>
+
+
+
     <nav class="nav">
         <div class="nav-search-box">
             <img src="./icons/favicon/facebook.png" alt="search-box-logo" class="nav-search-box--logo">
@@ -441,15 +449,15 @@
                     </p>
                 </div>
 
-                <!-- <div class="messenger-con--loader-con"> -->
-                <!-- <div class="messenger-con--loader-con--header"> -->
-                <!-- <div class="messenger-con--loader-con--header--img"></div> -->
-                <!-- <div class="messenger-con--loader-con--header--img--details"> -->
-                <!-- <div class="messenger-con--loader-con--header--img--details--name"></div> -->
-                <!-- <div class="messenger-con--loader-con--header--img--details--about"></div> -->
-                <!-- </div> -->
-                <!-- </div> -->
-                <!-- </div> -->
+
+
+
+
+
+
+
+
+
                 <div class="notification-con--loader">
                     <div class="notification-con--loader--header">
                         <div class="notification-con--loader--header--img"></div>
