--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="./icons/svg/icons8-male-user-32.svg" alt="" class="nav-responsive--icon-con--icon-box--icon">
             </div>
             <div class="nav-responsive--icon-con--icon-box">
-                <svg viewBox="0 0 28 28 " alt=" " class="nav-responsive--icon-con--icon-box--icon" height="2.8rem" width="2.8rem" style="user-select: auto; "><path d="M7.847 23.488C9.207 23.488 11.443 23.363 14.467 22.806 13.944 24.228 12.581 25.247 10.98 25.247 9.649
+                <svg viewBox="0 0 28 28" alt=" " class="nav-responsive--icon-con--icon-box--icon" height="2.8rem" width="2.8rem" style="user-select: auto; "><path d="M7.847 23.488C9.207 23.488 11.443 23.363 14.467 22.806 13.944 24.228 12.581 25.247 10.98 25.247 9.649
                     25.247 8.483 24.542 7.825 23.488L7.847 23.488ZM24.923 15.73C25.17 17.002 24.278 18.127 22.27 19.076 21.17 19.595 18.724 20.583 14.684 21.369 11.568 21.974 9.285 22.113 7.848 22.113 7.421 22.113 7.068 22.101 6.79 22.085 4.574
                     21.958 3.324 21.248 3.077 19.976 2.702 18.049 3.295 17.305 4.278 16.073L4.537 15.748C5.2 14.907 5.459 14.081 5.035 11.902 4.086 7.022 6.284 3.687 11.064 2.753 15.846 1.83 19.134 4.096 20.083 8.977 20.506 11.156 21.056 11.824
                     21.986 12.355L21.986 12.356 22.348 12.561C23.72 13.335 24.548 13.802 24.923 15.73Z " style="user-select: auto; "></path></svg>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="porfile-box">
-            <svg aria-hidden="true" class="porfile-box--circle" data-visualcompletion="ignore-dynamic" role="none" style="height: 28px; width: 28px; user-select: auto;"><mask id="jsc_c_9g" style="user-select: auto;"><circle cx="14" cy="14" fill="white" r="14" style="user-select: auto;"></circle></mask><g mask="url(#jsc_c_9g)" style="user-select: auto;"><image style="height: 28px; width: 28px; user-select: auto;" x="0" y="0" height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xlink:href="https://scontent.flyp4-1.fna.fbcdn.net/v/t39.30808-1/245042085_234079432031779_2930220725732838194_n.jpg?stp=c0.23.50.50a_cp0_dst-jpg_p50x50&amp;_nc_cat=103&amp;ccb=1-5&amp;_nc_sid=7206a8&amp;_nc_ohc=evY3tUYCfAUAX-guKnB&amp;_nc_ht=scontent.flyp4-1.fna&amp;oh=00_AT_fCkqaF2DmOcr7737HFYBOLPNp_J32W6L_J_jZKMnrjg&amp;oe=62338E4C"></image><circle class="mlqo0dh0 georvekb s6kb5r3f" cx="14" cy="14" r="14" style="user-select: auto;"></circle></g></svg>
+            <svg aria-hidden="true" class="porfile-box--circle" data-visualcompletion="ignore-dynamic" role="none" style="height: 28px; width: 28px; user-select: auto;"><mask id="jsc_c_2j" style="user-select: auto;"><circle cx="14" cy="14" fill="white" r="14" style="user-select: auto;"></circle></mask><g mask="url(#jsc_c_2j)" style="user-select: auto;"><image style="height: 28px; width: 28px; user-select: auto;" x="0" y="0" height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xlink:href="https://scontent-otp1-1.xx.fbcdn.net/v/t39.30808-1/245042085_234079432031779_2930220725732838194_n.jpg?stp=c0.23.50.50a_cp0_dst-jpg_p50x50&amp;_nc_cat=103&amp;ccb=1-5&amp;_nc_sid=7206a8&amp;_nc_ohc=XymkeWmMfy0AX98EZJd&amp;_nc_ht=scontent-otp1-1.xx&amp;oh=00_AT9puG_gu8pyY5KJIJ7AkDOaRQoD_Qw0b75gtQFIgbTzDA&amp;oe=623B774C"></image><circle class="mlqo0dh0 georvekb s6kb5r3f" cx="14" cy="14" r="14" style="user-select: auto;"></circle></g></svg>
             <span class="porfile-box--circle--name">Shayan</span>
         </div>
 
