--- a/index.html
+++ b/index.html
@@ -578,9 +578,16 @@
     </nav>
 
 
-    <section class="backbone">
+    <main class="backbone">
+        <section class="sidebar-con">
+            <div class="sidebar-con--flex">
+                <div class="sidebar-con--flex--box">
 
-    </section>
+                </div>
+
+            </div>
+        </section>
+    </main>
 
 </body>
 
