--- a/index.html
+++ b/index.html
@@ -581,9 +581,36 @@
     <main class="backbone">
         <section class="sidebar-con">
             <div class="sidebar-con--flex">
-                <div class="sidebar-con--flex--box">
-
+                <div class="sidebar-con--flex--box top-prefixer-sidebar">
+                    <img src="./img/author/download.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Shayan Mahmood</p>
                 </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/fb-icon/find-icon.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Find Friends</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/fb-icon/events-icon.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Events</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/fb-icon/game.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Play Games</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/fb-icon/groups-icon.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Groups</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/fb-icon/watch.png" alt="" class="sidebar-con--flex--box--img border-round">
+                    <p class="sidebar-con--flex--box--img--name">Watch</p>
+                </div>
+
 
             </div>
         </section>
