--- a/index.html
+++ b/index.html
@@ -612,6 +612,16 @@
                 </div>
 
 
+
+                <div class="sidebar-con--flex--box">
+                    <div class="sidebar-con--flex--box--circle">
+                        <svg viewBox="0 0 16 16" width="2.0rem" height="2.0rem" class="sidebar-con--flex--box--img  small-arrrow" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-448 -544)" style="user-select: auto;"><path fill-rule="nonzero" d="M452.707 549.293a1 1 0 0 0-1.414 1.414l4 4a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L456 552.586l-3.293-3.293z" style="user-select: auto;"></path></g></svg>
+                    </div>
+                    <p class="sidebar-con--flex--box--img--name">See More</p>
+                </div>
+
+
+                <div class="sidebar-con--flex--divider"></div>
             </div>
         </section>
     </main>
