--- a/index.html
+++ b/index.html
@@ -622,6 +622,28 @@
 
 
                 <div class="sidebar-con--flex--divider"></div>
+                <p class="sidebar-con--flex--box--heading-primary">Your Shortcuts</p>
+
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/smash-code.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">Smash Code Community</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/netflix-group.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">NetfliX Offical</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/DIY On A Budget Official-group.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">DIY On A Budget Offical</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/Group by Instant Pot-group-icon.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">Instant Pot Instant Pot® Community</p>
+                </div>
             </div>
         </section>
     </main>
